--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div class="hero-unit">
 <h1>Welcome to One Month Rails!</h1>
 <p>
 	You've found the home page for the 
@@ -5,6 +6,7 @@
 	application.
 </p>
 <p>
-	<%= link_to "Sign Up Now!", "#"%>
+	<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
 </p>
+</div>
 
