Customize Name and Titles Text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,10 @@
 	<h1>You are logged in!</h1>
 <% else %>
 <div class="hero-unit">
-<h1>Welcome to One Month Rails!</h1>
+<h1>Invite me!</h1>
 <p>
 	You've found the home page for the 
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+	<%= link_to "Invite me sample application based on One Month Rails", "http://onemonthrails.com" %>
 	application.
 </p>
 <p>
