--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
 	<small>
-		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-		by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
+		by <%= link_to "Neil Gehani", "http://twitter.com/GehaniNeil" %>
+		Tutorial by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
 	</small>
 </div>
