--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
             </a>
              
-             <%= link_to "One Month Rails", root_path, class:"brand" %>
+             <%= link_to "Invite.me", root_path, class:"brand" %>
 
                 <div class="nav-collapse">
                     <ul class="nav">
