Add User Model with Devise and two fields for first and last name

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
 <h1>Invite me!</h1>
 <p>
 	You've found the home page for the 
-	<%= link_to "Invite me sample application based on One Month Rails", "http://onemonthrails.com" %>
-	application.
+	<%= link_to "Invite me (Alpha) sample application based on One Month Rails", "http://onemonthrails.com" %>
+	Simple and Faster than evite and punchbowl and not dependent on Facebook or Google+
 </p>
 <p>
 	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
