--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,17 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
+  <%= f.error_notification %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.input :first_name %>
+  <%= f.input :last_name %>
+  <%= f.input :email, placeholder: 'user@domain.com' %>
+  <%= f.input :password, placeholder: 'hint: no special characters' %>
+  <%= f.input :password_confirmation, placeholder: 're-type your password' %>
+  
+  <div class="form-actions">
+  	<%= f.submit "Sign Up", class: "btn btn-primary" %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
