--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,8 +3,10 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :first_name %>
-  <%= f.input :last_name %>
+  <%#= f.input :first_name %>
+  <%#= f.input :last_name %>
+  <%# - how do I show the concatenation of first_name and last_name here %>
+  <%= f.input :name %>
   <%= f.input :email, placeholder: 'user@domain.com' %>
   <%= f.input :password, placeholder: 'hint: no special characters' %>
   <%= f.input :password_confirmation, placeholder: 're-type your password' %>
