--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,9 +1,9 @@
-<%= simple_form_for(@pin, html: { class: "form-horizontal"}) do |f| %>
+<%= simple_form_for(@pin, html: {class: "form_horizontal"}) do |f| %>
   <%= f.error_notification %>
 
-  <%= f.input :description, as: :text, input_html: { rows: "3" } %>
-
+    <%= f.input :description, as: :text, input_html: { rows: "3" } %>
+  
   <div class="form-actions">
-    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= f.button :submit, class: "btn  btn-primary" %>
   </div>
 <% end %>
