--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,21 +1,5 @@
-<h1>Listing pins</h1>
-
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Description</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-      <%= render @pins %>
-  </tbody>
-</table>
-
-<br>
+<div id="pins">
+  <%= render @pins %>
+</div>
 
 <%= link_to 'New Pin', new_pin_path %>
