Reroute home to pins#index in routes.rb

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,12 +1,10 @@
-<% if user_signed_in? %>
-	<h1>You are logged in!</h1>
-<% else %>
+<% unless user_signed_in? %>
 <div class="hero-unit">
 <h1>Invite me!</h1>
 <p>
 	You've found the home page for the 
-	<%= link_to "Invite me (Alpha) sample application based on One Month Rails", "http://onemonthrails.com" %>
-	Simple and Faster than evite and punchbowl and not dependent on Facebook or Google+
+	 Invite me (Alpha)
+	Simple and Faster than evite and punchbowl
 </p>
 <p>
 	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
