--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -5,9 +5,10 @@
 	</p>
 	<p>
 		<strong>
-			<%= link_to 'Show', pin %>
+			Posted by <%= pin.user.name %>
 		</strong>
 	</p>
+	
 	<% if current_user == pin.user %>
 	<p>
 		<%= link_to 'Edit', edit_pin_path(pin) %>
