--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,5 @@
+<%# render includes partials that begin with _*.html.erb %>
+<%= render 'pages/home' %>
 <div id="pins">
   <%= render @pins %>
 </div>
