--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -7,7 +7,7 @@ $baseFontFamily: Oxygen;
 @import url(http://fonts.googleapis.com/css?family=Oxygen);
 
 /* Change button Color */
-$btnPrimaryBackground: purple;
+$btnPrimaryBackground: #00BFFF;
 $navbarBackgroundHighlight: white;
 $navbarBackground: white;
 
