--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,9 @@
                 <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
             <% end %>
 			<%= yield %>
-			<%= render 'layouts/footer' %>
+			<div class="container">
+				<%= render 'layouts/footer' %>
+			</div>
 		</div>
 	</body>
 </html>
