Update home page with new domain

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,10 +1,8 @@
 <% unless user_signed_in? %>
 <div class="hero-unit">
-<h1>Invite me!</h1>
+<h1>Social Butterfly</h1>
 <p>
-	You've found the home page for the 
-	 Invite me (Alpha)
-	Simple and Faster than evite and punchbowl
+	Keep track of your social calendar to make lasting friendships
 </p>
 <p>
 	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
