--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </a>
              
-             <%= link_to "Invite me", root_path, class: "brand" %>
+             <%= link_to "Social Butterfly", root_path, class: "brand" %>
 
                 <div class="nav-collapse">
                     <ul class="nav">
