Update title and name

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -2,7 +2,7 @@
 <div class="hero-unit">
 <h1>Social Butterfly</h1>
 <p>
-	Keep track of your social calendar to make lasting friendships
+	Who's going to be THE Social Butterfly?
 </p>
 <p>
 	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
