--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,5 @@
 <%# render includes partials that begin with _*.html.erb %>
+<%# means look in pages subfolder for _home.html.erb %>
 <%= render 'pages/home' %>
 <div id="pins">
   <%= render @pins %>
