--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,36 +1,3 @@
-/*
-
-Import Font Families 
-
-*/
-$baseFontFamily: Oxygen;
-@import url(http://fonts.googleapis.com/css?family=Oxygen);
-
-/* Change button Color */
-$btnPrimaryBackground: #00BFFF;
-$navbarBackgroundHighlight: white;
-$navbarBackground: white;
-
-@import 'bootstrap';
-body{
-    padding-top: 60px;
-}
-
-@import 'bootstrap-responsive';
-
-.navbar-inner{
-    @include box-shadow(none !important);
-    border: 0;
-}
-
-.footer{
-    margin-top: 50px;
-    color: $grayLight;
-    a{
-        color: $gray;
-    }
-}
-
 /* Required for jQuery Masonry */
 /* anything beginning with a . is a class and used in views as class = "blah" */
 
@@ -56,4 +23,8 @@ body{
 
 .description {
     margin: 10px 0 5px;
+}
+
+#view_paginate {
+    visibility: hidden;
 }
