Updated to Rails 4 and Added jQuery masonry

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,7 +1,7 @@
 <%# render includes partials that begin with _*.html.erb %>
 <%# means look in pages subfolder for _home.html.erb %>
 <%= render 'pages/home' %>
-<div id="pins">
+<div id="pins" class="transitions-enabled">
   <%= render @pins %>
 </div>
 
