--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,46 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { class: 'form-horizontal'}) do |f| %>
-  <%= f.error_notification %>
-
-  <%#= f.input :first_name %>
-  <%#= f.input :last_name %>
-  <%# - how do I show the concatenation of first_name and last_name here %>
-  <%= f.input :name %>
-  <%= f.input :email, placeholder: 'user@domain.com' %>
-  <%= f.input :password, placeholder: 'hint: no special characters' %>
-  <%= f.input :password_confirmation, placeholder: 're-type your password' %>
-  
-  <div class="form-actions">
-  	<%= f.submit "Sign Up", class: "btn btn-primary" %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h1>Sign up</h1>
   </div>
-<% end %>
+   <div class="panel-body">
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>     
+        <%#= f.input :first_name %>
+        <%#= f.input :last_name %>
+        <%# - how do I show the concatenation of first_name and last_name here %>
+        <%#= f.input :name, class: "form-control" %>
+        <%#= f.input :email, placeholder: 'user@domain.com', autofocus: true %>
+        <%#= f.input :password, placeholder: 'hint: no special characters' %>
+        <%#= f.input :password_confirmation, placeholder: 're-type your password' %>
+  
+        <div class="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, autofocus: true, class: "form-control" %>
+        </div>
 
-<%= render "devise/shared/links" %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, placeholder: 'user@domain.com', autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, placeholder: 'hint: no special characters', class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, placeholder: 're-type your password', class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+    
+    <% end %>
+  </div>
+
+  <div class="panel-footer">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
