--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,10 +21,10 @@
     <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
             <li><%= link_to "Add +", new_pin_path %></li>
-            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
-            <li><%= link_to 'Login',  new_user_session_path %></li>
+            <li><%= link_to 'Log in',  new_user_session_path %></li>
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
