--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
 		
 		<div class="container">
 			<% flash.each do |name, msg| %>
-                <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
-            <% end %>
+          <%= content_tag(:div, msg, class: "alert alert-info") %>
+      <% end %>
 			<%= yield %>
 			<div class="container">
 				<%= render 'layouts/footer' %>
