--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,12 +1,9 @@
 <% unless user_signed_in? %>
-<div class="jumbotron">
+<div class="jumbotron center">
 <h1>Social Butterfly</h1>
 <p>
-	Who's going to be THE Social Butterfly?
-</p>
-<p>
-	<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-lg" %>
-	<%= link_to "Log In", new_user_session_path, class: "btn btn-default btn-lg" %>
+	<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+	<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
 </p>
 </div>
 <% end %>
