--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,13 +1,22 @@
-<%= simple_form_for(@pin, html: {class: "form_horizontal"}) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :image_file_size, class: "alert alert-error" %>
-  <%= f.full_error :image_content_type, class: "alert alert-error" %>
+<%= form_for @pin, html: { multipart: true } do |f| %>
+  <%# f.error_notification %>
+  <%# f.full_error :image_file_size, class: "alert alert-error" %>
+  <%# f.full_error :image_content_type, class: "alert alert-error" %>
 
-  	<%= f.input :image, label: "Upload an image" %>
-  	<%= f.input :image_remote_url, label: "or enter a URL" %>
-    <%= f.input :description, as: :text, input_html: { rows: "3" } %>
+  	 <%# f.input :image_remote_url, label: "or enter a URL" %>
+    <%# f.input :description, as: :text, input_html: { rows: "3" } %>
   
-  <div class="form-actions">
-    <%= f.button :submit, class: "btn  btn-primary" %>
+  <div class="form-group">
+    <%= f.label :image_remote_url %>
+    <%= f.file_field :image_remote_url, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
+  </div>
+  
+  <div class="form-group">
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
