--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,19 +1,14 @@
-<div class="box">
+<div class="box panel panel-default">
 	<%= link_to (image_tag pin.image(:medium)), pin %>
-	<p class= "description">
+	<div class="panel-body">
 		<%= pin.description %>
-	</p>
-	<p>
-		<strong>
-			Posted by <%= pin.user.name %>
-		</strong>
-	</p>
-	
-	<% if current_user == pin.user %>
-	<p>
-		<%= link_to 'Edit', edit_pin_path(pin) %>
-		<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
-	</p>
-	<% end %>
+		<%= pin.user.name if pin.user %>
+		<%= link_to 'Show', pin_path(pin) %>
+
+		<% if current_user == pin.user %>
+			<%= link_to 'Edit', edit_pin_path(pin) %>
+			<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+		<% end %>
+	</div>
 </div>
 
