--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,13 +1,13 @@
 <div class="box panel panel-default">
-	<%= link_to (image_tag pin.image(:medium)), pin %>
+	<%= link_to image_tag(pin.image.url(:medium)), pin %>
 	<div class="panel-body">
 		<%= pin.description %>
-		<%= pin.user.name if pin.user %>
-		<%= link_to 'Show', pin_path(pin) %>
-
+		<strong><%= pin.user.name if pin.user %></strong>
 		<% if current_user == pin.user %>
+		<div class="actions">
 			<%= link_to 'Edit', edit_pin_path(pin) %>
 			<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+		</div>
 		<% end %>
 	</div>
 </div>
