--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,17 +1,17 @@
+<%= link_to 'Back', pins_path %>
 <div class="row">
-    <div class="span6 offset3">
-        <div class="well">
-            <%= image_tag @pin.image.url(:medium) %>
-            <p>
-              <%= @pin.description %>
-            </p>
-            <p>
-              <%= @pin.user.name %>
-            </p>
-			<% if current_user == @pin.user %>
-                <%= link_to 'Edit', edit_pin_path(@pin) %> |
-            <% end %>
-            <%= link_to 'Back', pins_path %>
+    <div class="col-md-offset-2 col-md-8">
+        <div class="panel panel-default">
+            <div class="panel-heading center">
+                <%= image_tag @pin.image.url(:medium) %>
+            </div>
+            <div class="panel-body">
+                <p><%= @pin.description %></p>
+                <p><strong><%= @pin.user.name  if @pin.user %></strong></p>
+    			<% if current_user == @pin.user %>
+                    <%= link_to 'Edit', edit_pin_path(@pin) %> |
+                <% end %>
+            </div>
         </div>
     </div>
 </div>
