--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,8 +20,16 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-            <li><%= link_to "Add +", new_pin_path %></li>
-            <li><%= link_to "Account Settings", edit_user_registration_path %></li>
+            <li>
+              <%= link_to new_pin_path do %>
+                <span class="glyphicon glyphicon-plus-sign"></span> New Pin
+              <% end %>
+            </li>
+            <li>
+              <%= link_to edit_user_registration_path do %>
+                <span class="glyphicon glyphicon-user"></span> Account Settings
+              <% end %>
+            </li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
             <li><%= link_to 'Log in',  new_user_session_path %></li>
