--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -5,8 +5,12 @@
 		<strong><%= pin.user.name if pin.user %></strong>
 		<% if current_user == pin.user %>
 		<div class="actions">
-			<%= link_to 'Edit', edit_pin_path(pin) %>
-			<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+			<%= link_to edit_pin_path(pin) do %>
+				<span class="glyphicon glyphicon-edit"></span> Edit
+      <% end %>
+			<%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+				<span class="glyphicon glyphicon-remove-circle"></span> Remove
+      <% end %>
 		</div>
 		<% end %>
 	</div>
