--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,6 +1,6 @@
 <%# render includes partials that begin with _*.html.erb %>
 <%# means look in pages subfolder for _home.html.erb %>
-<%= render 'pages/home' %>
+<%= render 'pages/home' unless user_signed_in? %>
 <div id="pins" class="transitions-enabled">
   <%= render @pins %>
 </div>
