Added dropdown link, my pins view, and fixed endless scroll

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
 
         <div class="form-group">
           <%= f.label :email %>
-          <%= f.email_field :email, placeholder: 'user@domain.com', autofocus: true, class: "form-control" %>
+          <%= f.email_field :email, placeholder: 'user@domain.com', class: "form-control" %>
         </div>
 
         <div class="form-group">
