--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,21 +1,31 @@
 <%= form_for @pin, html: { multipart: true } do |f| %>
-  <%# f.error_notification %>
-  <%# f.full_error :image_file_size, class: "alert alert-error" %>
-  <%# f.full_error :image_content_type, class: "alert alert-error" %>
+  <% if @pin.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
 
-  	 <%# f.input :image_remote_url, label: "or enter a URL" %>
-    <%# f.input :description, as: :text, input_html: { rows: "3" } %>
-  
+      <ul>
+      <% @pin.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <div class="form-group">
-    <%= f.label :image_remote_url %>
-    <%= f.file_field :image_remote_url, class: "form-control" %>
+    <%= f.label "Enter the image URL" %>
+    <%= f.text_field :image_remote_url, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :image %>
     <%= f.file_field :image, class: "form-control" %>
   </div>
-  
+
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_field :description, class: "form-control" %>
+  </div>
+
   <div class="form-group">
     <%= f.submit class: "btn btn-primary" %>
   </div>
