--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,13 +22,19 @@
         <% if user_signed_in? %>
             <li>
               <%= link_to new_pin_path do %>
-                <span class="glyphicon glyphicon-plus-sign"></span> New Pin
+                <span class="glyphicon glyphicon-plus-sign" ></span> New Pin
               <% end %>
             </li>
-            <li>
-              <%= link_to edit_user_registration_path do %>
-                <span class="glyphicon glyphicon-user"></span> Account Settings
-              <% end %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.name %> <b class="caret"></b></a>  
+              <ul class="dropdown-menu">
+                  <li>
+                    <%= link_to edit_user_registration_path do %>
+                      <span class="glyphicon glyphicon-user"></span> Account Settings
+                    <% end %>
+                  </li>
+                  <li><%= link_to "My Pins", user_pins_path %></li>
+                </ul>
             </li>
             <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% else %>
