--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-static-top navbar-default" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-default" role="navigation">
   <div class="container">
    <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -22,7 +22,7 @@
         <% if user_signed_in? %>
             <li>
               <%= link_to new_pin_path do %>
-                <span class="glyphicon glyphicon-plus-sign" ></span> New Pin
+                <span class="glyphicon glyphicon-plus-sign" ></span> New
               <% end %>
             </li>
             <li class="dropdown">
