--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -16,7 +16,10 @@ $grayLight: #bdc3c7;
 
 @import 'bootstrap';
 body{
-    padding-top: 1px;
+    padding-top: 70px;
+}
+.navbar-nav {
+    font-size: 16px;
 }
 
 .center {
